tests/negative_tests/semantic_errors/int_return_void.c
// INVALID - Type Error: int function needs return value
// Expected: "function must return a value"
int getNumber() {
    int x;
    x = 5;
    return;  // ERROR: int function with empty return
}
